blocks/brand-partners/brand-partners.css
.brand-partners .partners-title {
    text-align: center;
    font-size: var(--heading-font-size-m);
    padding: 0 20px;
    margin: 0 auto 40px;
}

.brand-partners .partners-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    column-gap: 26px;
    row-gap: 52px;
    padding: 0;
}

.brand-partners .partners-list-item {
    list-style-type: none;
    width: clamp(136px, 30vw, 160px);
    opacity: 0.55;
    transition: opacity 0.3s ease-in-out;
}

.brand-partners .partners-list-item:hover {
    opacity: 1;
}

.brand-partners .partners-list-item img {
    margin: 0 auto;
    display: block;
    height: clamp(32px, 32px, 48px);
}

@media (min-width: 900px) {
    .brand-partners .partners-list-item {
        width: clamp(216px, 25vw, 280px);
    }

    .brand-partners .partners-list-item img {
        height: clamp(32px, 48px, 48px);
    }
}

@media (min-width: 1440px) {
    .brand-partners .partners-title {
        margin-bottom: 80px;
    }

    .brand-partners .partners-list {
        column-gap: 40px;
        row-gap: 80px;
    }
}

